2004-02-27 Scott Dattalo  <scott@dattalo.com>
	* src/pic-processor.cc, src/interface.cc, src/interface.h, 
	src/init.cc, src/icd.cc, src/cod.cc, src/breakpoints.cc,
	gui/gui_main.cc, gpsim/main.cc, cli/input.h, cli/input.cc,
	cli/cmd_x.cc, cli/cmd_run.cc, cli/cmd_dump.h, cli/cmd_dump.cc:
	The gpsim library, which is the code comprised of everything
	in the src/ subdirectory, now has no dependencies on the gui
	or cli code base. This makes it possible to link against
	just libgpsim. 

2004-02-25 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_stopwatch.cc, extras/rs232-gen/rs232-gen.c:
	changed all references of atoll to strtoll. bug 820326
	
2004-02-25 Hans-Juergen Dorn <hans.dorn@apl-landau.de>
	* src/16bit-registers.cc: gpsim was pushing onto
	the stack before decrementing the stack pointer. Also,
	the gpsim internally formatted address was being pushed.
	
2004-02-17  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_scope.cc: expose and resizing kind of work.

2004-02-17  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_scope.cc: taking off the rough edges.
	
2004-02-16  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_scope.cc: - new file that will support a simple waveform viewer.
	* gui/Makefile.am: add the gui_scope.cc to the list
	* gui/gui_regwin.cc: Check for null pointers
	* gui/gui_symbols.cc: Check for null pointers
	* src/pic-processor.cc, src/p16x5x.h, src/p12x.h, src/p12x.cc,
	src/14bit-registers.h, src/14bit-registers.cc, src/14bit-processors.cc,
	src/12bit-processors.h, src/12bit-processors.cc
	Added FSR_12 - a new class for the 12-bit core. I also redesigned the
	way FSR and INDF interact.
	* src/p18x.cc - the 18f252 package pins weren't defined.
	
2004-02-13  Scott Dattalo  <scott@dattalo.com>
	* src/processor.cc, src/processor.h, src/pic-processor.cc, src/cod.cc:
	Support for new file context
	* gui/gui_src_asm.cc, gui/gui_profile.cc:
	Use the new file context code.
	
2004-02-12  Scott Dattalo  <scott@dattalo.com>
	* src/interface.cc, src/interface.h: