@@ -172,7 +172,7 @@ void GUI_Interface::SimulationHasStopped(gpointer callback_data)
     gp->trace_window->Update();
     gp->profile_window->Update();
     gp->stopwatch_window->Update();
-    gp->scope_window->Update();
+    //gp->scope_window->Update();
 
   }
 
@@ -215,7 +215,7 @@ void GUI_Interface::NewProcessor (unsigned int pic_id)
     gp->trace_window->NewProcessor(gp);
     gp->profile_window->NewProcessor(gp);
     gp->stopwatch_window->NewProcessor(gp);
-    gp->scope_window->NewProcessor(gp);
+    //gp->scope_window->NewProcessor(gp);
 
 
   }
